# loan

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: python-package.yml
src/loan/: download.py  historic_tables.py  local_data.py  mortgage.py
src/loan/data/: consumer_price_index.csv  government_borrowing_rate.csv  list_rates.csv  old_omxs30_data.csv  omxs30.csv  policy_rate.csv
tests/: test_download.py  test_historic_tables.py  test_local_data.py  test_mortgage.py
